# SheetShuttle

./: .all-contributorsrc  .gitignore  .mdlrc  CONTRIBUTING.md  LICENSE  README.md  emptycells_plugin.py  env  key.env  key3.json  pyproject.toml  pytest.ini  team3apikey.json
.github/: style.css
.github/ISSUE_TEMPLATE/: sub-task.md  task.md
.github/workflows/: main .yml  release.yml
config/: ee_grader_gh_config.yml  sheets.json
config/github_interactions/: list1.yaml
config/old_config/: file3.yaml
config/sheet_sources/: file1.yaml  file2.yaml  git_creative_config.yaml  sample_config.yaml
docs/: DesignDocument.md  Google_API_Setup.md  getting_started.md  new approach.md  schemas.md  tutorial.md
gatorgopher/: demo.py  driver.py  sheet_collector.py  sheets_collector.py
gridgopher/: github_interaction.py  github_objects.py  main.py  sheet_collector.py  util.py
mock_api/: mock_gh_api.py
my-project/: mkdocs.yml
my-project/docs/: index.md
pandas-sample/: main.py  sample.json  sample.xlsx
path/to/man/pages/: mkdocs-build.1  mkdocs-gh-deploy.1  mkdocs-new.1  mkdocs-serve.1  mkdocs.1
plugins/: default.py  ee_grades.py  emptycells_plugin.py
sheetshuttle/: github_interaction.py  github_objects.py  main.py  mock_gh_api.py  sheet_collector.py  sheet_id_extract.py  util.py
team4_pkg/: mkdocs.yml  page-toc.html  search.html
team4_pkg/Doc skimmer/: nav-main.html
team4_pkg/docs/: Tutorial.md  index.md
team4_pkg/mkdocs_docskimmer/: 404.html  Tutorial.md  base.html  logo.html  mkdocs_theme.yml  searchbox.html  section-toc.html
team4_pkg/site/: 404.html  index.html  search.html
team4_pkg/site/Getting_Started/: index.html
team4_pkg/site/Google_API_Setup/: index.html
team4_pkg/site/Schemas/: index.html
team4_pkg/site/Tutorial/: index.html
team4_pkg/site/search/: search_index.json
tests/: __init__.py  conftest.py  test_github_interactions.py  test_github_objects.py  test_issue_entry.py  test_main.py  test_sheet_collector.py  test_util.py
tests/test_data/: collect_config_test.json  collect_files_test.json  collect_regions_test.json  file_schema_test.json  issues_schema_test.json  pr_schema_test.json  sheets_schema_test.json
